--- a/src/main.scss
+++ b/src/main.scss
@@ -3,8 +3,24 @@ $primary: #3a9acd !default;
 $error: #e83b35 !default;
 
 $states: (
-  ('primary', $primary, white, transparent, darken($primary, 8%), darken($primary, 6%), darken($primary, 4%)),
-  ('error', $error, white, transparent, darken($error, 8%), darken($error, 6%), darken($error, 4%))
+  (
+    "primary",
+    $primary,
+    white,
+    transparent,
+    darken($primary, 8%),
+    darken($primary, 6%),
+    darken($primary, 4%)
+  ),
+  (
+    "error",
+    $error,
+    white,
+    transparent,
+    darken($error, 8%),
+    darken($error, 6%),
+    darken($error, 4%)
+  )
 );
 
 @function GetVariable($key) {
@@ -16,10 +32,10 @@ $states: (
 }
 
 @mixin GenerateVariables {
-  @include GenerateVariable('border-radius', 3px);
+  @include GenerateVariable("border-radius", 3px);
 
   @each $state in $states {
     @include GenerateVariable(nth($state, 1), nth($state, 2));
-    @include GenerateVariable('#{nth($state, 1)}-contrast', nth($state, 3));
+    @include GenerateVariable("#{nth($state, 1)}-contrast", nth($state, 3));
   }
 }
